Text: Make sure text is always aligned to the start
Textfield would be starting from the center otherwise,
this ensures its always at the start position.

--- a/src/input/css/styles/breeze/text.css
+++ b/src/input/css/styles/breeze/text.css
@@ -41,6 +41,7 @@ spinbox
 textfield,
 textarea
 {
+    text-alignment: content start start 0;
     width: 200px;
 }
 
